--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Twowaysdatabinding">
+        android:theme="@style/Theme.Base">
         <activity
-            android:name="com.sample.databinding.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +18,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ViewBindingActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/ViewBinding" />
+        <activity
+            android:name=".DataBindingActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/DataBinding" />
+        <activity
+            android:name=".TwoWaysDataBindingActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/TwoWaysDataBinding" />
+
     </application>
 
 </manifest>
